objects/DelayOrderGiftCards__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Gift Card amount guidelines for delayed orders.</description>
    <fields>
        <fullName>Gift_Card_Tier_1__c</fullName>
        <label>Gift Card - Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Tier_2__c</fullName>
        <label>Gift Card - Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Value_Range_High__c</fullName>
        <label>Purchase Value Range High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Value_Range_Low__c</fullName>
        <label>Purchase Value Range Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Up_To_Purchase_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Up To Purchase Value</label>
        <type>Checkbox</type>
    </fields>
    <label>DelayOrderGiftCards</label>
</CustomObject>